// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopConsumers /> data-renders-correctly 1`] = `Object {}`;

exports[`<TopConsumers /> no-data-renders-correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Top Projects by Requested Capacity
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <TopConsumersBody
      topConsumerStats={Array []}
    />
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<TopConsumers /> render-correctly-on-loading 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Top Projects by Requested Capacity
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={true}
  >
    <TopConsumersBody
      topConsumerStats={Array []}
    />
  </DashboardCardBody>
</DashboardCard>
`;
